# DEILA

./: DEILATechDoc.docx  README.md
Deila.backend/: Program.cs  README.md  WeatherForecast.cs  appsettings.json
Deila.backend/Contexts/: DeilaDbContext.cs  article_seeding_data.xlsx
Deila.backend/Controllers/: ArticleController.cs  BasisController.cs  WeatherForecastController.cs
Deila.backend/Entities/: Article.cs  BaseEntity.cs  Basis.cs
Deila.backend/Migrations/: 20220724000748_deilainitial.Designer.cs  20220724000748_deilainitial.cs  20220724003312_fixederror.Designer.cs  20220724003312_fixederror.cs  20220727224425_CloudDeploy.Designer.cs  20220727224425_CloudDeploy.cs  20220801222143_test-articles.Designer.cs  20220801222143_test-articles.cs  20220801230359_import-articles.Designer.cs  20220801230359_import-articles.cs  20220801232517_import-articles-xlsx.Designer.cs  20220801232517_import-articles-xlsx.cs  DeilaDbContextModelSnapshot.cs
Deila.backend/Models/: ArticleDto.cs  BasisDto.cs
Deila.backend/Profiles/: ArticleProfile.cs  BasisProfile.cs
Deila.backend/Properties/: launchSettings.json  serviceDependencies.json  (+3 more)
Deila.frontend/: .env  README.md  deila.frontend.esproj  package-lock.json  package.json  vue.config.js
Deila.sentiment.backend/: README.md  pyproject.toml
Deila.sentiment.backend/app/: start-up.sh
Deila.sentiment.backend/app/api/endpoints/: sentiment_analysis.py
Deila.sentiment.backend/app/app/: main.py
Deila.sentiment.backend/app/core/: config.py
Deila.sentiment.backend/app/services/: gpt2_sentiment_analyzer.py
(+33 files in other folders)
