[tool.poetry]
name = "deila.sentiment.backend"
version = "0.1.0"
description = "Backend service to run machine learning api on sentiment analysis"
authors = ["Dean C Garcia"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.11.3"
fastapi = "^0.54.1"
requests = "^2.23.0"
pydantic = "^1.4"
raven = "^6.10.0"
gunicorn = "^20.0.4"